# dinosaur-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
scripts/windows/: docker-compose.yml
src/: game.cpp  gameConstants.cpp  gameConstants.hpp  gamePlay.cpp  gamePlay.hpp  gameState.cpp  gameState.hpp  main.cpp  tree.cpp  tree.hpp  trex.cpp  trex.hpp
src/gameInfoObjects/: score.hpp
src/gameObjects/: collisionBox.hpp  gameObjects.cpp  gameObjects.hpp  tree.cpp  tree.hpp  trex.cpp  trex.hpp
